--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
