fix :: wasm 빌드 팩 추가

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "^1.14.3",
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@opennextjs/cloudflare": "^1.14.3",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -33,6 +33,7 @@
     "eslint-config-next": "16.0.6",
     "tailwindcss": "^4",
     "typescript": "^5",
+    "wasm-pack": "^0.13.1",
     "wrangler": "^4.52.1"
   }
 }
