fix :: 라우팅 에러 수정

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "next dev --webpack",
     "build": "next build --webpack",
-    "build:static": "next build --webpack && next export",
     "wasm:build": "cd wasm && wasm-pack build --target web --out-dir ../public/pkg",
     "start": "next start",
     "lint": "eslint",
@@ -15,8 +14,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "electron:compile": "tsc -p electron/tsconfig.json",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && npm run electron:compile && electron .\"",
-    "electron:build": "npm run build:static && npm run electron:compile && electron-builder",
-    "electron:pack": "npm run build:static && npm run electron:compile && electron-builder --dir"
+    "electron:build": "npm run build && npm run electron:compile && electron-builder",
+    "electron:pack": "npm run build && npm run electron:compile && electron-builder --dir"
   },
   "dependencies": {
     "@ffmpeg/core": "^0.12.10",
@@ -37,7 +36,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "concurrently": "^9.1.0",
     "electron": "^33.2.1",
-    "electron-builder": "^25.1.8",
+    "electron-builder": "^24.13.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "tailwindcss": "^4",
