--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           cache: 'npm'
 
       - name: Install Rust (for wasm-pack)
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install wasm-pack
         run: cargo install wasm-pack
