feat :: 업데이트 확인 추가 & 투명도 조절 추가

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -10,6 +10,12 @@ files:
   - dist-electron/**/*
   - out/**/*
 
+publish:
+  provider: github
+  owner: BitByte08  # Assuming based on user path, will verify or ask user if needed. 
+  repo: PivotStation
+
+
 extraMetadata:
   main: dist-electron/main.js
 
